# Factory_Method_CPlusPlus

./: CMakeLists.txt  FrameFactory.cpp  WavyFrame.cpp  WavyFrame.h  main.cpp
